# nightshade-viewer

./: Cargo.toml  Design.md  README.md  index.html  justfile  nightshade-d814b2ba8be6c3f1.js
python_api/: Cargo.toml  pyproject.toml
python_api/examples/: demo.py
python_api/src/: lib.rs
src/: api.rs  app.rs  behavior.rs  context.rs  ecs.rs  graphics.rs  input.rs  ipc.rs  lib.rs  main.rs  network.rs  paint.rs  rpc.rs  run.rs  scene.rs  server.rs  state.rs  systems.rs  ui.rs  window.rs
src/modules/: graphics.rs  input.rs  run.rs  scene.rs  ui.rs  window.rs
src/modules/shaders/: grid.wgsl  triangle.wgsl
src/shaders/: equirect_to_cube.wgsl  line.wgsl  mesh.wgsl  post_process.wgsl  quad.wgsl  sky.wgsl
