[package]
name = "hemlock"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "hemlock_core"

[dependencies]
bitflags = "2.6.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
egui = "0.30.0"
egui_tiles = "0.11.0"
egui-wgpu = { version = "0.30.0", features = ["winit"] }
futures = "0.3.31"
log = "0.4.22"
nalgebra-glm = { version = "0.19.0", features = [
    "convert-bytemuck",
    "serde-serialize",
] }
serde = { version = "1.0.216", features = ["derive"] }
web-time = "1.1.0"
wgpu = { version = "23.0.1", default-features = false }
winit = "0.30.7"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"
egui-winit = "0.30.0"
pollster = "0.4.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
egui-winit = { version = "0.30.0", default-features = false }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"

[features]
default = ["wgpu/default"]
webgpu = ["wgpu/webgpu"]

# After building with --profile=release-small
# we can compress the final exe further with `upx`
# installed by calling:
# `just compress-exe` on windows
# `just compress-app` on unix 
[profile.release-compact]
inherits = "release"
codegen-units = 1 # Reduce parallel code generation units
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size
lto = true        # Link time optimization
panic = "abort"   # On panic, abort immediately rather than unwinding. Don't use this if you want backtraces.