[package]
name = "nightshade"
version = "0.1.0"
edition = "2021"
authors = ["Matthew J. Berger <matthewjordanberger@gmail.com>"]
description = """
nightshade is a portable graphics engine written in rust, capable of rendering complex interactive visualization of arbitrary data streams 🔎
"""
homepage = "https://github.com/matthewjberger/nightshade"
repository = "https://github.com/matthewjberger/nightshade"
keywords = ["macro"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "nightshade_engine"

[dependencies]
bitflags = "2.6.0"
bytemuck = { version = "1.21.0", features = ["derive"] }
egui = "0.30.0"
egui_tiles = "0.11.0"
egui-wgpu = { version = "0.30.0", features = ["winit"] }
futures = "0.3.31"
image = { version = "0.24.9", default-features = false, features = ["png", "hdr"] }
log = "0.4.22"
nalgebra-glm = { version = "0.19.0", features = ["convert-bytemuck", "serde-serialize"] }
web-time = "1.1.0"
wgpu = { version = "23.0.1", default-features = false }
winit = "0.30.8"
ewebsock = "0.8.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.135"
once_cell = "1.20.2"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.6"
egui-winit = "0.30.0"
futures-util = "0.3.28"
pollster = "0.4.0"
structopt = "0.3.26"
tokio = { version = "1.31.0", features = ["full"] }
tokio-tungstenite = "0.20.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
egui-winit = { version = "0.30.0", default-features = false }
wasm-bindgen = "0.2.99"
wasm-bindgen-futures = "0.4.49"

[features]
default = ["wgpu/default"]
webgpu = ["wgpu/webgpu"]

# After building with --profile=release-small
# we can compress the final exe further with `upx`
# installed by calling:
# `just compress-exe` on windows
# `just compress-app` on unix 
[profile.release-compact]
inherits = "release"
codegen-units = 1 # Reduce parallel code generation units
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size
lto = true        # Link time optimization
panic = "abort"   # On panic, abort immediately rather than unwinding. Don't use this if you want backtraces.
