[package]
name = "nightshade"
version = "0.1.0"
edition = "2021"
authors = ["Matthew J. Berger <matthewjordanberger@gmail.com>"]
description = """
nightshade is a portable graphics engine written in rust, capable of rendering complex interactive visualization of arbitrary data streams 🔎
"""
homepage = "https://github.com/matthewjberger/nightshade"
repository = "https://github.com/matthewjberger/nightshade"
keywords = ["macro"]
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"
name = "nightshade_core"

[dependencies]
bitflags = "2.9.1"
bytemuck = { version = "1.23.1", features = ["derive"] }
enum2egui = "0.3.11"
egui = "0.31.1"
egui_tiles = "0.12.0"
egui-wgpu = { version = "0.31.1", features = ["winit"] }
futures = "0.3.31"
image = { version = "0.24.9", default-features = false, features = ["png", "hdr"] }
log = "0.4.27"
nalgebra-glm = { version = "0.19.0", features = [
    "convert-bytemuck",
] }
web-time = "1.1.0"
wgpu = { version = "24.0.5", default-features = false }
winit = "0.30.11"
ewebsock = "0.8.0"
enum2str = "0.1.16"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
env_logger = "0.11.8"
egui-winit = "0.31.1"
futures-util = "0.3.31"
pollster = "0.4.0"
structopt = "0.3.26"
tokio = { version = "1.45.1", features = ["full"] }
tokio-tungstenite = "0.20.1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
console_error_panic_hook = "0.1.7"
console_log = "1.0.0"
egui-winit = { version = "0.31.1", default-features = false }
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"

[features]
default = ["wgpu/default"]
webgpu = ["wgpu/webgpu"]

# After building with --profile=release-small
# we can compress the final exe further with `upx`
# installed by calling:
# `just compress-exe` on windows
# `just compress-app` on unix 
[profile.release-compact]
inherits = "release"
codegen-units = 1 # Reduce parallel code generation units
strip = true      # Automatically strip symbols from the binary.
opt-level = "z"   # Optimize for size
lto = true        # Link time optimization
panic = "abort"   # On panic, abort immediately rather than unwinding. Don't use this if you want backtraces.
